  - AllFusionHarvest
  - Sametime
  - StarTeam
  - Yahoo

Documentation
======================
* Composite builder does not support Pause builder child element (CC-812). Reported by John Camerin
* Add documentation on "Building Plugins That Need External Libraries".

build loop
======================

BuildStatus
---------------------
* Add attribute 'vetoIfFailing'. Will abort the build if the project being monitored had the last build fail (CC-842).

CVS
---------------------
* Add attribute "skipEmailsFetching" for people who don't have CVSROOT/users and don't want the (harmless) messages in the log when that file isn't found (CC-841). Patch by Grzegorz Oledzki

Darcs
---------------------
* Fix Darcs support (CC-847). Patch by Marc Fontaine.

DateFormat
---------------------
* The ability to set the date format in the build loop has been removed. This fixes the issue where setting the date format on one project would affect all of them (CC-355), would cause build status messages to not display in the reporting application (CC-797). Build loop now uses ISO 8601 format for storing date stamp information (CC-353) which is a change from the previous default format.

Schedule
---------------------
* Fixed a bug where time builders could be hidden by a multiple builder earlier in the file (CC-839). Now Builders are evaluated by time, then by multiple and then by day.

ScriptRunner
---------------------
* Change ScriptRunner/AntBuilder to only create antBuilderOutput.log when needed. Reported by Jared Tafralian.

TFS
---------------------
* Add attributes to support connections profiles and non-default encodings (CC-853). Patch by Dmitry Malenok.

UCM
---------------------
* Logging contributor activities in UCM Modificationset throws a NullPointerException on Linux Platform (CC-815). Path by Patrick Jenner.


CruiseControl Release Notes - 2.7.3

general
======================